# tamscrapingpub

./: Cargo.toml  Dockerfile  Procfile  README.md
HTML/: extracted_data.json  extracted_data__.json  test20240608.html
HTML/old/: extracted_data.json  json _example.json  start_end.txt  test20240608.html  test20240608___.html
src/: main.rs
