[package]
name = "superscaper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11" ,  features = ["json"]}
scraper = "0.12"
mysql_async = "0.25"
tokio = {version = "1", features = ["full"]}

flate2 = "1.0"
regex = "1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

actix-web = "4.0.0"